--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -23,7 +23,7 @@
     nav
 {
     padding-top: 0;
-    min-width: 40%;
+    min-width: 30%;
 }
 
     nav ul
@@ -261,6 +261,7 @@
         margin-bottom: 2em;
         box-shadow: 0 0 10px #f2f2f2;
         box-sizing: content-box;
+        width: auto;
     }
     
     #visites
@@ -354,6 +355,11 @@
     .image1
     {
         width: 110px; 
+    }
+
+    .vp, .cal, .fp, .if, .ndg, .pl
+    {
+        width: auto;
     }
 }
     
