--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -119,6 +119,7 @@ input
     border: 2px solid #f2f2f2;
     font-size: 15px;
     padding: 1em;
+    width: 235px;
 }
 
 .marqueur_2
@@ -128,7 +129,7 @@ input
     color: white;
     border: 1px solid #f2f2f2; 
     font-size: 15px;
-    padding: 1em;
+    padding: 1.1em;
 }
 
 .marqueur_2:hover
@@ -276,11 +277,12 @@ a
     padding-bottom: 0.8em;
     margin-bottom: 2.5em;
     box-shadow: 0px 0px 16px #f2f2f2;
+    width: 235px;
 }    
 
 .image
 {
-    width: 235px;
+    width: 96%;
     height: 150px;
     object-fit: cover;
     border-radius:20px 20px 0 0; 
@@ -323,7 +325,7 @@ aside
 {
     display: flex;
     flex-flow: column wrap;
-    width: 350px;
+    width: 310px;
     height: 150px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
@@ -414,7 +416,7 @@ aside
     background-color: white;
     box-shadow: 0 0 10px #f2f2f2;
     height: 100%;
-    width: 320px;
+    width: 310px;
 }
 
 .fp
@@ -424,7 +426,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     margin-bottom: 3.2em;
     height: 100%;
-    width: 320px;
+    width: 310px;
 }
 
 .if
@@ -434,7 +436,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.1em;
     height: 100%;
-    width: 320px;
+    width: 310px;
 }
 
 .ndg
@@ -445,7 +447,7 @@ aside
     padding-bottom: 0.1em;
     margin-bottom: 2.8em;
     height: 100%;
-    width: 320px;
+    width: 310px;
 }
 
 .pl
@@ -455,7 +457,7 @@ aside
     box-shadow: 0 0 10px #f2f2f2;
     padding-bottom: 0.16em;
     height: 100%;
-    width: 320px;
+    width: 310px;
 }
 
 .image2
