--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -302,6 +302,11 @@
         width: auto;
     }
 
+    /*.image1
+    {
+        max-width: 250px;
+    }*/
+
     .image
     {
         height: 250px;
@@ -312,94 +317,18 @@
         width: 100%;
     }
 
+    .image2, .image3, .image4, .image5
+    {
+        height: 250px;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width : 715px)
+{
     .image1
     {
-        max-width: 250px;
+        width: 250px;
     }
-
-    .image2, .image3, .image4, .image5
-    {
-        height: 250px;
-    }
-
-    /*.aa1
-    {
-        display: flex;
-    }
-
-    .fpif
-    {
-        order: 2;
-    }
-
-    .ndgpl
-    {
-        order: 3;
-    }
-
-    .vp
-    {
-        width: 200px;
-        z-index: 2;
-        position: absolute;
-        margin-top: -18em;
-        margin-bottom: 0;
-        height: 240px;
-        padding: 0;
-    }
-
-    .fp
-    {
-        width: 200px;
-        margin-top: 1em;
-        padding-bottom: 0;
-    }
-
-    .cal
-    {
-        max-width: 200px;
-        margin-top: 17.7em;
-        height: 240px;
-    }
-
-    .pl
-    {
-        height: 250px;
-        padding-bottom: 0;
-    }
-
-    .if
-    {
-        margin-top: 2em;
-        width: 200px;
-        padding-bottom: 0;
-    }
-
-    .ndg
-    {
-        width: 200px;
-        padding-bottom: 0;
-        margin-top: 1em;
-    }
-
-    .pl
-    {
-        height: 250px;
-        width: 200px;
-        padding-bottom: 0;
-    }
-
-    .image2, .image3, .image4, .image5
-    {
-        width: 100%;
-        height: 180px;
-    }
-
-    .pnc
-    {
-        font-size: 13px;
-    }*/
-
 }
 
 @media screen and (max-width: 480px)
