--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -186,7 +186,12 @@
 {
     .vignettes
     {
-        width: 310px;
+        width: 440px;
+    }
+
+    .image
+    {
+        width: 98%;
     }
 
     .vp
@@ -257,7 +262,6 @@
     }
 
 }
-
 
 @media screen and (min-width: 720px) and (max-width: 920px)
 {
