Haute résolution version soutenance du 23 avrtil2021.

--- a/style_haute_resolution.css
+++ b/style_haute_resolution.css
@@ -79,3 +79,21 @@
     }
 }
 
+@media screen and (min-width:2170px)
+{
+    .vignettes
+    {
+        width: 480px;
+    }
+
+    .image
+    {
+        width: 98%;
+    }
+
+    .image2, 
+    {
+        width: 560px;
+    }
+}
+
