--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -94,11 +94,6 @@
     {
         padding: 1em 0 0 1em;
     }
-
-    /*#s3
-    {
-        margin: 0 3em 3em 3em;
-    }*/
     
     .fpif
     {
@@ -151,10 +146,15 @@
         padding-bottom: 0;
     }
 
-    .image2, .image3, .image4, .image5
+    .image2, .image4, .image5
     {
         width: 100%;
         height: 180px;
+    }
+
+    .image3
+    {
+        height: 240px;
     }
 
     .pnc
