--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -413,7 +413,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 10px #f2f2f2;
+    box-shadow: 0 0 16px #f2f2f2;
     height: 100%;
     width: 310px;
 }
@@ -422,19 +422,18 @@ aside
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 0 0 10px #f2f2f2;
-    margin-bottom: 3.2em;
-    height: 100%;
+    box-shadow: 7px 7px 16px #f2f2f2;
+    border: 1px solid white;
     width: 310px;
+    margin-bottom: 3em;
 }
 
 .if
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 10px #f2f2f2;
-    padding-bottom: 0.1em;
-    height: 100%;
+    box-shadow: 7px 7px 16px #f2f2f2;
+    border: 1px solid white;
     width: 310px;
 }
 
@@ -442,7 +441,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 10px #f2f2f2;
+    box-shadow: 0 0 16px #f2f2f2;
     padding-bottom: 0.1em;
     margin-bottom: 2.8em;
     height: 100%;
@@ -453,7 +452,7 @@ aside
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 0 0 10px #f2f2f2;
+    box-shadow: 0 0 16px #f2f2f2;
     padding-bottom: 0.16em;
     height: 100%;
     width: 310px;
@@ -467,10 +466,10 @@ aside
     border-radius: 20px 20px 0 0;
 }
 
-.image3, .image5
+.image3
 {
     width: 100%;
-    height: 187px;
+    height: 255px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -478,9 +477,17 @@ aside
 .image4
 {
     width: 100%;
-    height: 182px;
+    height: 115px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
+}
+
+.image5
+{
+    width: 100%;
+    height: 187px;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0
 }
 
 h3
