--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -146,15 +146,10 @@
         padding-bottom: 0;
     }
 
-    .image2, .image4, .image5
+    .image2, .image3, .image4, .image5
     {
         width: 100%;
         height: 180px;
-    }
-
-    .image3
-    {
-        height: 240px;
     }
 
     .pnc
