Modifs du 23 04 apm.

--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -258,6 +258,14 @@
 
 }
 
+@media screen and (min-width: 925px) and (max-width: 1025px)
+{
+    .vp
+    {
+        margin-top: -15em;
+    }
+}
+
 @media screen and (min-width: 720px) and (max-width: 920px)
 {
     .p1
